force-app/main/default/objects/Housing_Unit__c/Housing_Unit__c.object-meta.xml
<CustomObject>
    <label>Housing Unit</label>
    <nameField>
        <label>Housing Unit Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Housing Units</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>