force-app/main/default/objects/Housing_Unit__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Housing Units</relationshipLabel>
    <relationshipName>Housing_Units</relationshipName>
    <type>Lookup</type>
</CustomField>