force-app/main/default/objects/Housing_Unit__c/fields/Effective_Renter_Rent__c.field-meta.xml
<CustomField>
    <fullName>Effective_Renter_Rent__c</fullName>
    <description>The actual monthly contribution the Young Renter pays for this unit. Combined with Market_Rent_ZIP__c to calculate the notional rent savings, which drives the 15% Property Placement Fee.</description>
    <label>Effective Renter Rent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>