force-app/main/default/objects/Housing_Unit__c/fields/IoT_Device_ID__c.field-meta.xml
<CustomField>
    <fullName>IoT_Device_ID__c</fullName>
    <label>IoT Device ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>