force-app/main/default/objects/Housing_Unit__c/fields/Market_Rent_ZIP__c.field-meta.xml
<CustomField>
    <fullName>Market_Rent_ZIP__c</fullName>
    <description>The median market rent for a comparable room in this property&apos;s ZIP code. Updated monthly by a Scheduled Flow pulling from external data. Used as the baseline in the placement fee formula: (Market_Rent_ZIP__c - Effective_Renter_Rent__c) * 0.15.</description>
    <label>Market Rent (ZIP)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>