force-app/main/default/objects/Housing_Unit__c/fields/NexGen_Certified__c.field-meta.xml
<CustomField>
    <fullName>NexGen_Certified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>NexGen Certified</label>
    <type>Checkbox</type>
</CustomField>