force-app/main/default/objects/Housing_Unit__c/fields/Property_Score__c.field-meta.xml
<CustomField>
    <fullName>Property_Score__c</fullName>
    <label>Property Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>