force-app/main/default/objects/Housing_Unit__c/fields/Wheelchair_Access__c.field-meta.xml
<CustomField>
    <fullName>Wheelchair_Access__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Wheelchair Access</label>
    <type>Checkbox</type>
</CustomField>